added favicon and lowercase folder name

--- a/explore.html
+++ b/explore.html
@@ -23,6 +23,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="images/logo.png">
 </head>
 
 <body class="sub_page">
@@ -69,7 +70,7 @@
   
   <section class="restaurant_section layout_padding">
     <div class="grid-container">
-      <div class="grid-item" onclick="location.href='restaurants/Wendys.html';">
+      <div class="grid-item" onclick="location.href='restaurants/wendys.html';">
         <img src="images/Wendys.png" alt="Wendy's">
       </div>
       <div class="grid-item" onclick="location.href='restaurant2.html';">Restaurant 2</div>
