--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="author" content="" />
 
   <title>Foodie</title>
+  
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -23,6 +24,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="images/logo.png">
 </head>
 
 <body>
