--- a/restaurants/Wendys.html
+++ b/restaurants/Wendys.html
@@ -24,6 +24,7 @@
   <!-- responsive style -->
   <link href="../css/responsive.css" rel="stylesheet" /> 
   <script src="restaurant.js" defer></script> 
+  <link rel="icon" type="image/png" href="../images/logo.png">
 </head>
 
 <body class="sub_page">
@@ -91,25 +92,25 @@
                 </tr>
             </thead>
                 <tbody>
-                    <tr data-url="Wendys/davesSingle.html">
+                    <tr data-url="wendys/davesSingle.html">
                         <td>Dave's Single</td>
                         <td class="calorie-cell"></td>
                         <td class="score-cell"></td>
                         <td class="price-cell"></td>
                     </tr>
-                    <tr data-url="Wendys/davesDouble.html">
+                    <tr data-url="wendys/davesDouble.html">
                         <td>Dave's Double</td>
                         <td class="calorie-cell"></td>
                         <td class="score-cell"></td>
                         <td class="price-cell"></td>
                     </tr>
-                    <tr data-url="Wendys/davesTriple.html">
+                    <tr data-url="wendys/davesTriple.html">
                         <td>Dave's Triple</td>
                         <td class="calorie-cell"></td>
                         <td class="score-cell"></td>
                         <td class="price-cell"></td>
                     </tr>
-                    <tr data-url="Wendys/baconator.html">
+                    <tr data-url="wendys/baconator.html">
                         <td>Baconator</td>
                         <td class="calorie-cell"></td>
                         <td class="score-cell"></td>
@@ -131,25 +132,25 @@
               </tr>
           </thead>
               <tbody>
-                  <tr data-url="Wendys/frenchFries.html">
+                  <tr data-url="wendys/frenchFries.html">
                       <td>French Fries</td>
                       <td class="calorie-cell"></td>
                       <td class="score-cell"></td>
                       <td class="price-cell"></td>
                   </tr>
-                  <tr data-url="Wendys/baconatorFries.html">
+                  <tr data-url="wendys/baconatorFries.html">
                       <td>Baconator Fries</td>
                       <td class="calorie-cell"></td>
                       <td class="score-cell"></td>
                       <td class="price-cell"></td>
                   </tr>
-                  <tr data-url="Wendys/chiliCheeseFries.html">
+                  <tr data-url="wendys/chiliCheeseFries.html">
                       <td>Chili Cheese Fries</td>
                       <td class="calorie-cell"></td>
                       <td class="score-cell"></td>
                       <td class="price-cell"></td>
                   </tr>
-                  <tr data-url="Wendys/cheeseFries.html">
+                  <tr data-url="wendys/cheeseFries.html">
                       <td>Cheese Fries</td>
                       <td class="calorie-cell"></td>
                       <td class="score-cell"></td>
@@ -171,25 +172,25 @@
                 </tr>
             </thead>
             <tbody>
-                <tr data-url="Wendys/blueberryPomegranateLemonade.html">
+                <tr data-url="wendys/blueberryPomegranateLemonade.html">
                     <td>Blueberry Pomegranate Lemonade</td>
                     <td class="calorie-cell"></td>
                     <td class="score-cell"></td>
                     <td class="price-cell"></td>
                 </tr>
-                <tr data-url="Wendys/pineappleMangoLemonade.html">
+                <tr data-url="wendys/pineappleMangoLemonade.html">
                     <td>Pineapple Mango Lemonade</td>
                     <td class="calorie-cell"></td>
                     <td class="score-cell"></td>
                     <td class="price-cell"></td>
                 </tr>
-                <tr data-url="Wendys/allNaturalLemonade.html">
+                <tr data-url="wendys/allNaturalLemonade.html">
                     <td>All-Natural Lemonade</td>
                     <td class="calorie-cell"></td>
                     <td class="score-cell"></td>
                     <td class="price-cell"></td>
                 </tr>
-                <tr data-url="Wendys/strawberryLemonade.html">
+                <tr data-url="wendys/strawberryLemonade.html">
                     <td>Strawberry Lemonade</td>
                     <td class="calorie-cell"></td>
                     <td class="score-cell"></td>
@@ -210,25 +211,25 @@
           </tr>
       </thead>
           <tbody>
-              <tr data-url="Wendys/tripleBerryFrosty.html">
+              <tr data-url="wendys/tripleBerryFrosty.html">
                   <td>Triple Berry Frosty</td>
                   <td class="calorie-cell"></td>
                   <td class="score-cell"></td>
                   <td class="price-cell"></td>
               </tr>
-              <tr data-url="Wendys/classicChocolateFrosty.html">
+              <tr data-url="wendys/classicChocolateFrosty.html">
                   <td>Classic Chocolate Frosty</td>
                   <td class="calorie-cell"></td>
                   <td class="score-cell"></td>
                   <td class="price-cell"></td>
               </tr>
-              <tr data-url="Wendys/cinnabonPullApart.html">
+              <tr data-url="wendys/cinnabonPullApart.html">
                   <td>Cinnabon Pull-Apart</td>
                   <td class="calorie-cell"></td>
                   <td class="score-cell"></td>
                   <td class="price-cell"></td>
               </tr>
-              <tr data-url="Wendys/chocolateChunkCookie.html">
+              <tr data-url="wendys/chocolateChunkCookie.html">
                   <td>Chocolate Chunk Cookie</td>
                   <td class="calorie-cell"></td>
                   <td class="score-cell"></td>
