--- a/restaurants/Wendys/davesSingle.html
+++ b/restaurants/Wendys/davesSingle.html
@@ -23,6 +23,7 @@
         <!-- responsive style -->
         <link href="../../css/responsive.css" rel="stylesheet" />
         <script src="../../script.js" defer></script>
+        <link rel="icon" type="image/png" href="../../images/logo.png">
       </head>
 <body>
 
