--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <!-- end slider section -->
   </div>
 
-  <!-- about section -->
+  <!-- about section
 
   <section class="about_section layout_padding">
     <div class="container">
@@ -242,7 +242,57 @@
     </div>
   </section>
 
-  <!-- end about section -->
+  end about section -->
+
+  <!-- blog section -->
+<section class="blog_section layout_padding">
+  <div class="container">
+    <div class="heading_container">
+      <h2>Our Latest Blog Posts</h2>
+      <p>Explore our latest updates and food stories</p>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="blog_box">
+          <div class="img-box">
+            <img src="images/burger.jpg" alt="Blog 1">
+          </div>
+          <div class="detail-box">
+            <h5>Blog Post Title 1</h5>
+            <p>Brief description or introduction to the blog post content. Learn more about the topic here...</p>
+            <a href="/blog/blog1">Read More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="blog_box">
+          <div class="img-box">
+            <img src="images/cupcake.jpg" alt="Blog 2">
+          </div>
+          <div class="detail-box">
+            <h5>Blog Post Title 2</h5>
+            <p>Brief description or introduction to the blog post content. Discover insights and tips here...</p>
+            <a href="/blog/blog2">Read More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="blog_box">
+          <div class="img-box">
+            <img src="images/frappuccino.jpg" alt="Blog 3">
+          </div>
+          <div class="detail-box">
+            <h5>Blog Post Title 3</h5>
+            <p>Brief description or introduction to the blog post content. Explore the story behind the dish...</p>
+            <a href="/blog/blog3">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- end blog section -->
+
 
   <!-- food section -->
 
@@ -307,8 +357,10 @@
     </div>
   </section>
 
-  <!-- end animal section -->
+  <!-- end food section -->
 
+
+  
   <!-- contact section -->
 
   <section class="contact_section layout_padding-top">
