--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
               <div class="overlay-content">
                 <a href="index.html">Home</a>
                 <a href="explore.html">Explore</a>
+                <a href="overview.html">Blog</a>
                 <a href="contact.html">Contact Us</a>
               </div>
             </div>
@@ -248,43 +249,46 @@
 <section class="blog_section layout_padding">
   <div class="container">
     <div class="heading_container">
-      <h2>Our Latest Blog Posts</h2>
+      <a href="blog/overview.html"><h2>Our Latest Blog Posts</h2></a>
       <p>Explore our latest updates and food stories</p>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="blog_box">
           <div class="img-box">
-            <img src="images/burger.jpg" alt="Blog 1">
+            <a href = "blog/blog1.html"><img src="images/burger.jpg" alt="Blog 1"></a>
           </div>
           <div class="detail-box">
-            <h5>Blog Post Title 1</h5>
+            <div class="date">August 15, 2024</div>
+            <a href = "blog/blog1.html"><h5>Blog Post Title 1</h5></a>
             <p>Brief description or introduction to the blog post content. Learn more about the topic here...</p>
-            <a href="/blog/blog1">Read More</a>
+            <a href="blog/blog1.html">Read More</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="blog_box">
           <div class="img-box">
-            <img src="images/cupcake.jpg" alt="Blog 2">
+            <a href = "blog/blog2.html"><img src="images/cupcake.jpg" alt="Blog 2"></a>
           </div>
           <div class="detail-box">
-            <h5>Blog Post Title 2</h5>
+            <div class="date">August 15, 2024</div>
+            <a href = "blog/blog2.html"><h5>Blog Post Title 2</h5></a>
             <p>Brief description or introduction to the blog post content. Discover insights and tips here...</p>
-            <a href="/blog/blog2">Read More</a>
+            <a href="blog/blog2.html">Read More</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="blog_box">
           <div class="img-box">
-            <img src="images/frappuccino.jpg" alt="Blog 3">
+            <a href = "blog/blog2.html"><img src="images/frappuccino.jpg" alt="Blog 3"></a>
           </div>
           <div class="detail-box">
-            <h5>Blog Post Title 3</h5>
+            <div class="date">August 15, 2024</div>
+            <a href = "blog/blog3.html"><h5>Blog Post Title 3</h5></a>
             <p>Brief description or introduction to the blog post content. Explore the story behind the dish...</p>
-            <a href="/blog/blog3">Read More</a>
+            <a href="blog/blog3.html">Read More</a>
           </div>
         </div>
       </div>
