--- a/explore.html
+++ b/explore.html
@@ -55,6 +55,7 @@
               <div class="overlay-content">
                 <a href="index.html">Home</a>
                 <a href="explore.html">Explore</a>
+                <a href="overview.html">Blog</a>
                 <a href="contact.html">Contact Us</a>
               </div>
             </div>
