--- a/restaurants/wendys/baconatorFries.html
+++ b/restaurants/wendys/baconatorFries.html
@@ -56,6 +56,7 @@
                       <div class="overlay-content">
                         <a href="../../index.html">Home</a>
                         <a href="../../explore.html">Explore</a>
+                        <a href="../../overview.html">Blog</a>
                         <a href="../../contact.html">Contact Us</a>
                       </div>
                     </div>
