--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Foodie</title>
+  <title>Food Meets Business</title>
   
 
   <!-- bootstrap core css -->
@@ -375,31 +375,15 @@
             <div class="heading_container">
               <img src="images/heading-img.png" alt="">
               <h2>
-                Submit Review
+                Join Our Mailing List!
               </h2>
               <p>
-                Please fill out the following form if you would like to contribute!
+                Please fill out the following form
               </p>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeeXInMTBtLDlIbC64IPlKnDxQZuKj67iL4CqunYC8oCKRSGw/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
             </div>
-            <form action="">
-              <div>
-                <input type="text" placeholder="Full Name " />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone number" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Blog Post" />
-              </div>
-              <div class="d-flex ">
-                <button>
-                  SEND
-                </button>
-              </div>
-            </form>
+            
           </div>
         </div>
         <div class="col-md-6 px-0">
