--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -14,7 +14,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Foodie</title>
+  <title>Food Meets Business</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
