--- a/restaurants/wendys/chiliCheeseFries.html
+++ b/restaurants/wendys/chiliCheeseFries.html
@@ -11,7 +11,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
       
-        <title>Foodie</title>
+        <title>Food Meets Business</title>
       
         <!-- bootstrap core css -->
         <link rel="stylesheet" type="text/css" href="../../css/bootstrap.css" />
