--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -112,30 +112,7 @@
               </tr>
           </thead>
               <tbody>
-                  <tr data-url="wendys/frenchFries.html">
-                      <td>French Fries</td>
-                      <td class="calorie-cell"></td>
-                      <td class="score-cell"></td>
-                      <td class="price-cell"></td>
-                  </tr>
-                  <tr data-url="wendys/baconatorFries.html">
-                      <td>Baconator Fries</td>
-                      <td class="calorie-cell"></td>
-                      <td class="score-cell"></td>
-                      <td class="price-cell"></td>
-                  </tr>
-                  <tr data-url="wendys/chiliCheeseFries.html">
-                      <td>Chili Cheese Fries</td>
-                      <td class="calorie-cell"></td>
-                      <td class="score-cell"></td>
-                      <td class="price-cell"></td>
-                  </tr>
-                  <tr data-url="wendys/cheeseFries.html">
-                      <td>Cheese Fries</td>
-                      <td class="calorie-cell"></td>
-                      <td class="score-cell"></td>
-                      <td class="price-cell"></td>
-                  </tr>
+                  
                   <!-- and so on... -->
               </tbody>
           </table>
@@ -427,7 +404,7 @@ function populateTable(jsonData, tableId) {
 
 // Call the function to fetch data and populate the table
 fetchAndPopulateTable('/restaurants/wendys/json/mainCourses.json', 'main_course_table');
-
+fetchAndPopulateTable('/restaurants/wendys/json/mainCourses.json', 'main_course_table');
 </script>
 </body>
 
