--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -404,6 +404,9 @@ function populateTable(jsonData, tableId) {
 
 // Call the function to fetch data and populate the table
 fetchAndPopulateTable('/restaurants/wendys/json/mainCourses.json', 'main_course_table');
+fetchAndPopulateTable('/restaurants/wendys/json/sides.json', 'sides_table');
+fetchAndPopulateTable('/restaurants/wendys/json/beverages.json', 'beverage_table');
+fetchAndPopulateTable('/restaurants/wendys/json/desserts.json', 'desserts_table');
 </script>
 </body>
 
