--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -301,11 +301,14 @@
 <script>
 async function fetchAndPopulateTable(jsonFile, tableId) {
     try {
-        const response = await fetch(jsonFile,{
-          
-        }); // Fetch the JSON file
+        const response = await fetch(jsonFile); // Fetch the JSON file
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
         const jsonData = await response.json(); // Parse the JSON data
+
         jsonData.items.forEach(item => {
+            // Get the array of values
             const values = [
                 item.flavor,
                 item.balance,
@@ -316,31 +319,32 @@ async function fetchAndPopulateTable(jsonFile, tableId) {
             ];
 
             // Calculate the average score (ignore null values)
-            const validValues = values.filter(value => value !== null);
-            const score = validValues.reduce((acc, val) => acc + val, 0) / validValues.length;
+            const validValues = values.filter(value => value !== null && value !== undefined);
+            const score = validValues.length > 0 ? (validValues.reduce((acc, val) => acc + val, 0) / validValues.length) : null;
 
             // Assign the calculated score back to the item
             item.score = score;
-            console.log(score);
+            console.log(`Item: ${item.name}, Calculated Score: ${score}`);
         });
-        populateTable(jsonData, tableId);       // Populate the table
+
+        populateTable(jsonData.items, tableId); // Populate the table with updated items
     } catch (error) {
         console.error('Error fetching the JSON file:', error);
     }
 }
 
-// Function to populate the table
-function populateTable(jsonData, tableId) {
+
+function populateTable(items, tableId) {
     const tableBody = document.querySelector(`#${tableId} tbody`);
 
     // Clear existing rows
     tableBody.innerHTML = '';
 
     // Iterate over each item in the JSON array
-    jsonData.forEach(item => {
+    items.forEach(item => {
         // Create a new row
         const row = document.createElement('tr');
-        
+
         // Add data-url attribute if present
         if (item.url) {
             row.setAttribute('data-url', item.url);
@@ -358,18 +362,26 @@ function populateTable(jsonData, tableId) {
 
         const cellScore = document.createElement('td');
         cellScore.className = 'score-cell';
-        cellScore.textContent = item.score !== null ? item.score : '';
+        cellScore.textContent = item.score !== null ? item.score.toFixed(1) : ''; // Display score with 1 decimal place
         row.appendChild(cellScore);
 
         const cellPrice = document.createElement('td');
         cellPrice.className = 'price-cell';
-        cellPrice.textContent = item.price !== null ? item.price : '';
+        cellPrice.textContent = item.price !== null ? formatAsPrice(item.price) : '';
         row.appendChild(cellPrice);
 
         // Append the row to the table body
         tableBody.appendChild(row);
     });
-    console.log(jsonData);
+}
+
+function formatAsPrice(value) {
+    const formatter = new Intl.NumberFormat('en-US', {
+        style: 'currency',
+        currency: 'USD',
+        minimumFractionDigits: 2
+    });
+    return formatter.format(value);
 }
 
 // Call the function to fetch data and populate the table
