--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -301,50 +301,28 @@
 <script>
 async function fetchAndPopulateTable(jsonFile, tableId) {
     try {
-        const response = await fetch(jsonFile); // Fetch the JSON file
-        if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-        }
+        const response = await fetch(jsonFile,{
+          
+        }); // Fetch the JSON file
         const jsonData = await response.json(); // Parse the JSON data
-
-        jsonData.items.forEach(item => {
-            // Get the array of values
-            const values = [
-                item.flavor,
-                item.balance,
-                item.intensity,
-                item.aftertaste,
-                item.texture,
-                item.appearance
-            ];
-
-            // Calculate the average score (ignore null values)
-            const validValues = values.filter(value => value !== null && value !== undefined);
-            const score = validValues.length > 0 ? (validValues.reduce((acc, val) => acc + val, 0) / validValues.length) : null;
-
-            // Assign the calculated score back to the item
-            item.score = score;
-            console.log(`Item: ${item.name}, Calculated Score: ${score}`);
-        });
-
-        populateTable(jsonData.items, tableId); // Populate the table with updated items
+        populateTable(jsonData, tableId);       // Populate the table
     } catch (error) {
         console.error('Error fetching the JSON file:', error);
     }
 }
 
-
-function populateTable(items, tableId) {
+// Function to populate the table
+function populateTable(jsonData, tableId) {
     const tableBody = document.querySelector(`#${tableId} tbody`);
 
     // Clear existing rows
     tableBody.innerHTML = '';
 
     // Iterate over each item in the JSON array
-    items.forEach(item => {
+    jsonData.forEach(item => {
         // Create a new row
         const row = document.createElement('tr');
-
+        
         // Add data-url attribute if present
         if (item.url) {
             row.setAttribute('data-url', item.url);
@@ -362,26 +340,18 @@ function populateTable(items, tableId) {
 
         const cellScore = document.createElement('td');
         cellScore.className = 'score-cell';
-        cellScore.textContent = item.score !== null ? item.score.toFixed(1) : ''; // Display score with 1 decimal place
+        cellScore.textContent = item.score !== null ? item.score : '';
         row.appendChild(cellScore);
 
         const cellPrice = document.createElement('td');
         cellPrice.className = 'price-cell';
-        cellPrice.textContent = item.price !== null ? formatAsPrice(item.price) : '';
+        cellPrice.textContent = item.price !== null ? item.price : '';
         row.appendChild(cellPrice);
 
         // Append the row to the table body
         tableBody.appendChild(row);
     });
-}
-
-function formatAsPrice(value) {
-    const formatter = new Intl.NumberFormat('en-US', {
-        style: 'currency',
-        currency: 'USD',
-        minimumFractionDigits: 2
-    });
-    return formatter.format(value);
+    console.log(jsonData);
 }
 
 // Call the function to fetch data and populate the table
