--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -302,7 +302,9 @@
 async function fetchAndPopulateTable(jsonFile, tableId) {
     try {
         const response = await fetch(jsonFile,{
-          
+          headers: {
+    'Accept': 'application/json'
+  }
         }); // Fetch the JSON file
         const jsonData = await response.json(); // Parse the JSON data
         populateTable(jsonData, tableId);       // Populate the table
