--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -241,8 +241,8 @@
 
 
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="../js/bootstrap.js"></script>
   <script>
     function openNav() {
       document.getElementById("myNav").classList.toggle("menu_width")
