fix only doing main course and bootstrap path

--- a/restaurants/wendys/chiliCheeseFries.html
+++ b/restaurants/wendys/chiliCheeseFries.html
@@ -285,8 +285,8 @@
       <!-- Add more review boxes as needed -->
     </div>
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="../../js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../../js/bootstrap.js"></script>
     <script>
     function openNav() {
       document.getElementById("myNav").classList.toggle("menu_width")
