--- a/contact.html
+++ b/contact.html
@@ -81,13 +81,13 @@
           </div>
           <form action="https://formsubmit.co/mbhsfoodmeetsbusiness@gmail.com" method="POST">
             <div>
-              <input type="text" placeholder="Full Name " />
+              <input type="text" name = "name" placeholder="Full Name" />
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="email" name = "email" placeholder="Email" />
             </div>
             <div>
-              <textarea class="message-box" placeholder="Blog Post"></textarea>
+              <textarea class="message-box" name = "blog" placeholder="Blog Post"></textarea>
             </div>
             
             <div class="d-flex ">
