--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,9 @@
               Please fill out the following form if you would like to contribute!
             </p>
             <p>We cannot confirm that your submission will be posted.</p>
-            <p>Please email mbhsfoodmeetsbusiness@gmail.com for more information</p>
+            <p>Please also fill out form if you have any questions</p>
           </div>
-          <form action="https://formsubmit.co/mbhsfoodmeetsbusiness@gmail.com" method="POST">
+          <form action="https://formsubmit.co/39dc743b391eb50ac58090d460648e64" method="POST">
             <div>
               <input type="text" name = "name" placeholder="Full Name" />
             </div>
