--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
               Please fill out the following form if you would like to contribute!
             </p>
             <p>We cannot confirm that your submission will be posted.</p>
-            <p>Please also fill out form if you have any questions</p>
+            <p>Please also fill out the form if you have any questions</p>
           </div>
           <form action="https://formsubmit.co/39dc743b391eb50ac58090d460648e64" method="POST">
             <div>
