--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -151,7 +151,7 @@
                       for (const [key, value] of Object.entries(frenchFries.scores)) {
                           ratingItems.innerHTML += `
                               <div class="label">${key.charAt(0).toUpperCase() + key.slice(1)}</div>
-                              <div class="rating-bar" data-value="${value}"></div>
+                              <div class="rating-bar" data-value=${value}></div>
                           `;
                       }
           
@@ -214,6 +214,8 @@
                   .catch(error => console.error('Error fetching data:', error));
           });
           </script>
+
+<script src="path/to/your/script.js" defer></script>
           
     </body>
 </html>
