--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -215,7 +215,7 @@
           });
           </script>
 
-<script src="path/to/your/script.js" defer></script>
+<script src="../../script.js" defer></script>
           
     </body>
 </html>
