--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -149,10 +149,28 @@
                       const ratingItems = document.querySelector('#rating-items');
                       ratingItems.innerHTML = ''; // Clear previous content if any
                       for (const [key, value] of Object.entries(frenchFries.scores)) {
-                          ratingItems.innerHTML += `
-                              <div class="label">${key.charAt(0).toUpperCase() + key.slice(1)}</div>
-                              <div class="rating-bar" data-value=${value}></div>
-                          `;
+                      const color = getColor(value);
+                      ratingItems.innerHTML += `
+                          <div class="label">${key.charAt(0).toUpperCase() + key.slice(1)}</div>
+                          <div class="rating-bar" style="width: ${value}%; background-color: ${color};" data-value="${value}"></div>
+                      `;
+                      totalValue += value; // Add value to total
+                  }
+
+                  // Calculate and display average score
+                  const averageValue = totalValue / Object.keys(frenchFries.scores).length;
+                  document.getElementById("average-value").innerText = averageValue.toFixed(1);
+                  const averageColor = getColor(averageValue);
+                  document.querySelector(".average-score").style.backgroundColor = averageColor;
+
+                  function getColor(value) {
+                      if (value >= 90) return "#009392"; 
+                      if (value >= 75) return "#39B185"; 
+                      if (value >= 60) return "#9CCB86"; 
+                      if (value >= 50) return "#E9E29C"; 
+                      if (value >= 40) return "#EEB479";
+                      if (value >= 30) return "#E88471";
+                      return "#CF597E"; // Red
                       }
           
                       // Update nutrition table
