--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -161,7 +161,7 @@
                       else if (value < 30) color= "#CF597E";
                           ratingItems.innerHTML += `
                               <div class="label">${key.charAt(0).toUpperCase() + key.slice(1)}</div>
-                              <div class="rating-bar"  data-value="${value}" style = "width=${value}%; background-color: ${color};"></div>
+                              <div class="rating-bar"  data-value="${value}" style = "width: ${value}%; background-color: ${color};"></div>
                           `;
                       }
           
