--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -73,9 +73,9 @@
                         Score: <span id="average-value"></span>
                     </div>
                     <div class="rating-items" id="rating-items"></div>
-                    <div class="label">Calories: </div>
+                    <div class="label">Calories</div>
                     <div class="label" id="calories"></div>
-                    <div class="label">Price: </div>
+                    <div class="label">Price</div>
                     <div class="label" id="price"></div>
                 </div>
             </div>
