edited review display

--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -113,7 +113,7 @@
               </div>
         </div>
 
-        <div id="reviews" class="tabcontent reviews-container" id="reviews-container"></div>
+        <div id="reviews" class="tabcontent reviews-container" id="reviews-container" style="display:block; "></div>
       
         <script type="text/javascript" src="../../js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="../../js/bootstrap.js"></script>
