--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -111,6 +111,7 @@
                   </tbody>
                 </table>
               </div>
+            </div>
         </div>
 
         <div id="reviews" class="tabcontent reviews-container" id="reviews-container" style="display:block; "></div>
@@ -226,9 +227,6 @@
                   .catch(error => console.error('Error fetching data:', error));
           });
           </script>
-<script>
-  
-</script>
 </body>       
     
 </html>
