--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -207,7 +207,7 @@
                               </tr>
                           `;
                       });
-
+                      console.log(frenchFries.reviews);
                       // Update reviews
                       const reviewsContainer = document.querySelector('#reviews');
                       reviewsContainer.innerHTML = ''; // Clear previous reviews if any
