no original src image

--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -65,7 +65,7 @@
         
         <div class="specificFood">
             <div class="image-section">
-                <img id="food-image" src="images/frenchFries.png" alt="Food Image">
+                <img id="food-image" alt="Food Image">
             </div>
             <div class="rating-section">
                 <div class="rating-grid">
