no original title

--- a/restaurants/wendys/frenchFries.html
+++ b/restaurants/wendys/frenchFries.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="Food-Title">
-            <h1 id="food-title">French Fries</h1>
+            <h1 id="food-title"></h1>
         </div>
         
         <div class="specificFood">
