--- a/restaurants/wendys/food.html
+++ b/restaurants/wendys/food.html
@@ -230,6 +230,17 @@
                           `;
                       });
 
+                      const clickableRows = document.querySelectorAll('#ingredients-table-body .clickable');
+            clickableRows.forEach(row => {
+                row.addEventListener('click', function() {
+                    // Toggle the next sibling row with class 'details'
+                    const detailsRow = this.nextElementSibling;
+                    if (detailsRow && detailsRow.classList.contains('details')) {
+                        detailsRow.style.display = detailsRow.style.display === 'none' ? 'table-row' : 'none';
+                    }
+                });
+            });
+
                       // Update reviews
                       const reviewsContainer = document.querySelector('#reviews');
                       reviewsContainer.innerHTML = ''; // Clear previous reviews if any
@@ -249,20 +260,6 @@
                   .catch(error => console.error('Error fetching data:', error));
           });
         </script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-    const clickableRows = document.querySelectorAll('#infoTable .clickable');
-    
-    clickableRows.forEach(row => {
-      row.addEventListener('click', function() {
-        // Toggle the next sibling row with class 'details'
-        const detailsRow = this.nextElementSibling;
-        if (detailsRow && detailsRow.classList.contains('details')) {
-          detailsRow.style.display = detailsRow.style.display === 'none' ? 'table-row' : 'none';
-        }
-      });
-    });
-  });
-        </script>
+        
 </body>       
 </html>
