--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -150,7 +150,7 @@
     <section class="highlights_section layout_padding">
       <div class="container">
         <h1 style="text-align:center"><b>Highlights</b></h1>
-        <div class="food_container" id="highlights-container">
+        <div class="highlights_container" id="highlights-container">
           <!-- Highlight boxes will be populated by JavaScript -->
         </div>
       </div>
