--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -242,10 +242,11 @@ function populateHighlights(jsonData) {
                     highlightBox.innerHTML = `
                         <a href="/restaurants/food.html?id=${highlight.id}" class="img-box">
                         <img src="${highlight.image}" alt="${highlight.name}">
-                        <div class="detail-box">
-                        <h5>${highlight.name}</h5>
-                        </div>
                         </a>
+                        <div class="detail-box">
+                        <h5><a href="/restaurants/food.html?id=${highlight.id}">${highlight.name}</a></h5>
+                        </div>
+                        
                     `;
                     
                     highlightsContainer.appendChild(highlightBox);
