--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -62,9 +62,9 @@
 
   <!-- food section -->
   <section class="restaurant_section layout_padding">
-    <div class="logo_image">
-        <img src="../images/Wendys.png" alt="">
-    </div>
+    <div class="logo_image" id="logo-image">
+      <img alt="logo image" id="logo-img">
+  </div>
 
     <div class="tab">
       <button class="tablinks" onclick="openTab(event, 'main')" >Food</button>
@@ -186,6 +186,7 @@ async function fetchAndPopulateData() {
         const infoData = await infoResponse.json();
         populateHighlights(infoData, restaurantId);
         populateBackground(infoData, restaurantId);
+        updateLogo(infoData, restaurantId);
     } catch (error) {
         console.error('Error fetching the JSON file:', error);
     }
@@ -260,9 +261,19 @@ function populateHighlights(jsonData, restaurantId) {
 
 function populateBackground(jsonData, restaurantId) {
     jsonData.forEach(item => {
-        if (item.restaurant.toLowerCase() === restaurantId) {
+        if (item.id.toLowerCase() === restaurantId) {
             const backgroundElement = document.getElementById('restaurant-background');
             backgroundElement.textContent = item.background;
+        }
+    });
+}
+
+function updateLogo(jsonData, restaurantId) {
+    jsonData.forEach(item => {
+        if (item.id.toLowerCase() === restaurantId) {
+            const logoImageElement = document.getElementById('logo-img');
+            logoImageElement.src = item.image; // Update logo image source
+            logoImageElement.alt = item.name; // Optionally update the alt text
         }
     });
 }
