--- a/restaurants/wendys.html
+++ b/restaurants/wendys.html
@@ -63,7 +63,7 @@
   <!-- food section -->
   <section class="restaurant_section layout_padding">
     <div class="logo_image" id="logo-image">
-      <img alt="logo image" id="logo-img">
+      <img src="/images/loading.png" alt="logo image" id="logo-img">
   </div>
 
     <div class="tab">
